--- a/pom.xml
+++ b/pom.xml
@@ -50,5 +50,10 @@
         <artifactId>pdftest</artifactId>
         <version>7.0.4</version>
     </dependency>
+      <dependency>
+          <groupId>com.itextpdf</groupId>
+          <artifactId>itextpdf</artifactId>
+          <version>5.0.6</version>
+      </dependency>
   </dependencies>
 </project>
