--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,14 @@
       </plugin>
     </plugins>
   </build>
+
   <dependencies>
   	<dependency>
   		<groupId>com.itextpdf</groupId>
   		<artifactId>kernel</artifactId>
   		<version>7.0.4</version>
   	</dependency>
+
   	<dependency>
         <groupId>com.itextpdf</groupId>
         <artifactId>io</artifactId>
@@ -45,15 +47,23 @@
         <artifactId>pdfa</artifactId>
         <version>7.0.4</version>
     </dependency>
+
     <dependency>
         <groupId>com.itextpdf</groupId>
         <artifactId>pdftest</artifactId>
         <version>7.0.4</version>
     </dependency>
+
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-log4j12</artifactId>
+          <version>1.7.18</version>
+      </dependency>
+
       <dependency>
           <groupId>com.itextpdf</groupId>
           <artifactId>itextpdf</artifactId>
-          <version>5.5.12</version>
+          <version>5.5.11</version>
       </dependency>
   </dependencies>
 </project>
