--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Created by https://www.gitignore.io/api/java,macos,windows,eclipse,intellij
 
 ### Eclipse ###
@@ -54,10 +53,10 @@ local.properties
 .worksheet
 
 ### Eclipse Patch ###
-# Eclipse Core		
+# Eclipse Core
 .project
 
-# JDT-specific (Eclipse Java Development Tools)		
+# JDT-specific (Eclipse Java Development Tools)
 .classpath
 
 ### Intellij ###
@@ -68,6 +67,7 @@ local.properties
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
+.idea
 
 # Sensitive or high-churn files:
 .idea/**/dataSources/
@@ -194,12 +194,19 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+### Maven ###
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+
+# Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
+!/.mvn/wrapper/maven-wrapper.jar
+
 # End of https://www.gitignore.io/api/java,macos,windows,eclipse,intellij
-.idea/libraries/Maven__com_itextpdf_itextpdf_5_0_6.xml
-.idea/libraries/Maven__com_itextpdf_itextpdf_5_0_6.xml
-.idea/libraries/Maven__org_bouncycastle_bcmail_jdk14_1_38.xml
-.idea/libraries/Maven__org_bouncycastle_bcprov_jdk14_1_38.xml
-.idea/libraries/Maven__org_bouncycastle_bctsp_jdk14_1_38.xml
-.idea/workspace.xml
-report-generator.iml
-report-generator.iml
+*.pdf
