--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,14 @@ buildNumber.properties
 
 # End of https://www.gitignore.io/api/java,macos,windows,eclipse,intellij
 *.pdf
+.idea/libraries/Maven__com_itextpdf_pdftest_7_0_4.xml
+.idea/libraries/Maven__com_itextpdf_pdftest_7_0_4.xml
+.idea/libraries/Maven__com_itextpdf_pdfa_7_0_4.xml
+.idea/libraries/Maven__com_itextpdf_layout_7_0_4.xml
+.idea/libraries/Maven__com_itextpdf_kernel_7_0_4.xml
+.idea/libraries/Maven__com_itextpdf_io_7_0_4.xml
+.idea/libraries/Maven__com_itextpdf_forms_7_0_4.xml
+.idea/libraries/Maven__ch_qos_logback_logback_core_1_1_3.xml
+.idea/libraries/Maven__ch_qos_logback_logback_classic_1_1_3.xml
+.idea/compiler.xml
+.classpath
