--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,4 @@ buildNumber.properties
 
 # End of https://www.gitignore.io/api/java,macos,windows,eclipse,intellij
 *.pdf
+com.report-generator.iml
