--- a/.gitignore
+++ b/.gitignore
@@ -225,3 +225,7 @@ src/.DS_Store
 src/.DS_Store
 src/reportgenerator/main.java
 src/reportgenerator/main.java
+src/Ressources/zer.gif
+src/reportgenerator/window/Ressources/space.gif
+src/reportgenerator/main.java
+src/Ressources/space.gif
