--- a/pom.xml
+++ b/pom.xml
@@ -83,5 +83,10 @@
             <artifactId>jdatepicker</artifactId>
             <version>1.3.4</version>
         </dependency>
+      <dependency>
+              <groupId>org.apache.commons</groupId>
+              <artifactId>commons-lang3</artifactId>
+              <version>3.0</version>
+      </dependency>
     </dependencies>
 </project>
